Entrega4TP/css/style.css
/* ... */
.searchGame span{
    font-style: oblique;
}

.downloadButton{
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 24px;
    position: absolute;
    top: 381px;
    left: 350px;
    border:4px solid white;
    background-color: rgb(34, 212, 34);
    border-radius: 40px;
    width: 540px;
    height: 66px;
    
}

/*______________________SECCION 4______________________*/
.seccion4{
    background-color: white;
    height: 5421px;/*5442px;*/
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.parte-titulo{
    height: 235px;
}

.parte-articulos{
    height: 5186px; /*totalseccion4 = 5421 / parteTitulo = 235 / parteArticulos = 5186*/
    position: relative;
    display: flex;
}

.title-secCuatro{
    margin: 0;
    position: relative;
    left: 100px;
    top: 125px;
    font-size: 60px;
}

.articles-secCuatro{
    margin: 0;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.personajes-secCuatro{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 613px;
    left: 230px;
}

.pj{
    position: fixed;
    top: 140px;
    height: 445px;
    width: 290px;
    transform: scale(1);
    opacity: 1;
    transition: transform 0.8s ease, opacity 0.5s ease;
}

.pj-sticky-cero{
    position: sticky;
    top: 140px;
    height: 445px;
    width: 290px;
    transform: scale(1);
    opacity: 1;
    transition: transform 0.8s ease, opacity 0.5s ease;
}

.pj-sticky-diez{
    position: sticky;
    bottom: 140px;
    height: 445px;
    width: 290px;
    transform: scale(1);
    opacity: 1;
    transition: transform 0.8s ease, opacity 0.5s ease;
}

.ocultar-pj{
    height: 435px;
    width: 290px;
    transform: scale(0.1);
    opacity: 0;
    transition: transform 0.5s ease, opacity 0.5s ease;
    visibility: hidden;
}

.art-secCuatro{
    position: relative;
    /*top: 40px;
    left: 100px;*/
    width: 467PX;
}

.title-artCuatro{margin: 0;
    font-size: 40px;
}

.p-secCuatro{
    margin: 0;
    font-size: 20px;
}
/*______________________FIN SECCION 4______________________*/

/*seccion 5*/
.seccion5{
    background-image: url('../src/seccion5/Rectangle\ 25.svg');
    height: 1444px;
    overflow: hidden;
}

.videoDescription{
    margin: 0;
    position: absolute;
    top:307px;
    left: 100px;
    width: 802px;
    height: 171px;
}

.videoDescription h1{
    margin: 0;
    text-align: start;
    font-weight: bold;
    font-size: 60px;
    line-height: 94.5%;
    letter-spacing: 0%;
    align-self: top;
}

.video{
    position:absolute;
    top:526px;
    left: 100px;
}

.personaje3video{
    position:absolute;
    top:352px;
    left:720px;
}


/* SECCION 6 */

.seccion6{
    background-image: url('../src/seccion6/455\ -\ para cortar.svg');
    height: 2037px;/*1763px;*/
    background-repeat: no-repeat;
    object-fit: cover;
    background-position: center bottom 275px;    
    overflow: hidden;
}


.imagen3d{
    position: absolute;
    width: 667px;
    height: 973px;
    right: 14px;
    top: 7px
}

#reveal{
    width: 100%;
    height: 100%;

}

.descripcion3d{    
    width: 467px;
    height: 190px;
}

.descripcion3d p{
    width: inherit;
    position: absolute;
    left: 100px;
    top: 548px;
}


.titulo3d{
    margin:0;
    padding: 0;
    position: absolute;    
    width: 746px;
    height: 285px;
    left: 102px;
    top: 220px;
}

.titulo3d h1{
    margin: 0;
    padding: 0;
    font-size: 60px;
    font-family: Lato;
    color: #9D2121;
    text-align: left;
}


.seccion7{
    background-image: url('../src/seccion7/ff\ 2.svg');
    height: 1296px;
    object-fit: cover;
    overflow: hidden;
}

.novedades{
    margin: 0;
    position: absolute;
    top:-84px;
    left: 100px;
    width: 816px;
    height: 171px;
}

.novedades h1{
    margin: 0;
    color: black;
    text-align: start;
    font-weight: bold;
    font-size: 60px;
    line-height: 94.5%;
    letter-spacing: 0%;
    align-self: top;
}

.input-section{
    position:absolute;
    left: 100px;
    top:123px;
}

.inscripcion-content{
    position: absolute;
    left: 100px;
    top: 269px;
}
.inscripcion-content p{
    font-size: 20px;
    height: 218px;
    width: 704px;
    font-weight: 300;
}

.restriction{
    position:absolute;
    left: 100px;
    top: 375px;
}



.gif1,.gif2,.gif3{
    position: absolute;
}

.gif3{
    bottom: 42px;
    left:65px
}
.gif2{
    left: 756px;
    bottom: -41px;
}
.gif2 img{
    height: 997px;
    width: 561px;
}
.gif1{
    bottom: 42px;
    left: 407px;
}


footer{
    width: 1280px;
    height: 595px;
    background-color: #242424;
    display: flex;
    flex-direction: column;
}
.footer-content{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 80px;
}
.footer-play-consoles{
    max-width: 1080px;
}

.footer-about-container{
    background-color: #5E5E5D;
    height: 515px;
    display: flex;
    justify-content: center;
}

.footer-about-content{
    width: 1080px;
    font-size: 20px;
}















































/*prueba
.box{
    position: absolute;
    width: 100px;
    height: 100px;
    background-color: black;
    color:white;
    border-radius: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 1s ease-in-out;
    rotate: -30deg;
}

#uno{
    background-color: cadetblue;
}

#dos{
    background-color: yellow;
}

#tres{
    background-color: black;
}

#cuatro{
    background-color: red;
}

#cinco{
    background-color:grey;
}

#seis{
    background-color: green;
}

#siete{
    background-color: blue;
}

#ocho{
    background-color: yellow;
}

.boxAlert{
    background-color: red;
    color: black;
    font-size: 25px;
    font-weight: bolder;
    rotate: 0deg;
    transition: 2s ease-in-out;
}
/* ... */

